objects/Account.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Thread_ID__c</fullName>
        <formula>&quot;ref:_&quot; &amp; LEFT($Organization.Id,5) &amp; SUBSTITUTE(RIGHT($Organization.Id,11), &quot;0&quot;, &quot;&quot; )&amp; &quot;._&quot; &amp; LEFT(Id,5) &amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(Id,5) &amp; &quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thread ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Tag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To allow a work item to be created from a new case record</description>
        <inlineHelpText>Populate to ensure work item can be created.</inlineHelpText>
        <label>Product Tag</label>
        <referenceTo>agf__ADM_Product_Tag__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Slack_Channel__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This Slack Channel will be used when posting updates to Slack</inlineHelpText>
        <label>Slack Channel</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Product_Tag_manditory</fullName>
        <active>true</active>
        <description>Product Tag on Accounts object to be populated to enable the case &gt; work item agile accelerator process to run</description>
        <errorConditionFormula>AND(
 ISBLANK( Product_Tag__c)
)</errorConditionFormula>
        <errorDisplayField>Product_Tag__c</errorDisplayField>
        <errorMessage>Please populate to enable case to work item process to run.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Slack_Channel_must_start_with_hashtag</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(Slack_Channel__c)), 
        LEFT(Slack_Channel__c, 1)!=&quot;#&quot;
        )</errorConditionFormula>
        <errorMessage>Slack channel must begin with a hashtag (#)</errorMessage>
    </validationRules>
</CustomObject>